--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="navbar">
+          <div class="logo">
+            <a href="#">LOGOS</a>
+          </div>
+        </div>
+      </header>
+    </div>
+  </body>
 </html>
