--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/all.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
@@ -12,6 +13,21 @@
         <div class="navbar">
           <div class="logo">
             <a href="#">LOGOS</a>
+          </div>
+          <div class="search">
+            <i class="fa-solid fa-location-dot"></i>
+            <input type="search" placeholder=" Введите адрес доставки" />
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <div class="contacts">
+            <i class="fa-solid fa-phone-volume"></i>
+            <a href="#"
+              >Контакты: <br />
+              <span>+7 (917) 510-57-59</span></a
+            >
+          </div>
+          <div class="header-btn">
+            <button>Корзина <span>4</span></button>
           </div>
         </div>
       </header>
