--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           <div class="card cont">
             <div class="card-content">
               <div class="card-img">
-                <img src="./img/menu 1.png" alt="" />
+                <img src="./img/menu 1 (2).png" alt="" />
               </div>
               <div class="continer-cadr__text">
                 <div class="card-titel__text">
@@ -448,7 +448,7 @@
             </div>
             <div class="card-content">
               <div class="card-img">
-                <img src="./img/menu 1.png" alt="" />
+                <img src="./img/menu 1 (3).png" alt="" />
               </div>
               <div class="continer-cadr__text">
                 <div class="card-titel__text">
@@ -494,7 +494,7 @@
             </div>
             <div class="card-content">
               <div class="card-img">
-                <img src="./img/menu 1.png" alt="" />
+                <img src="./img/menu 1 (1).png" alt="" />
               </div>
               <div class="continer-cadr__text">
                 <div class="card-titel__text">
@@ -517,7 +517,7 @@
             </div>
             <div class="card-content">
               <div class="card-img">
-                <img src="./img/menu 1.png" alt="" />
+                <img src="./img/menu 1 (2).png" alt="" />
               </div>
               <div class="continer-cadr__text">
                 <div class="card-titel__text">
@@ -540,7 +540,7 @@
             </div>
             <div class="card-content">
               <div class="card-img">
-                <img src="./img/menu 1.png" alt="" />
+                <img src="./img/menu 1 (3).png" alt="" />
               </div>
               <div class="continer-cadr__text">
                 <div class="card-titel__text">
