--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="card-content">
               <div class="card-img">
-                <img src="./img/menu 1.png" alt="" />
+                <img src="./img/menu 1 (2).png" alt="" />
               </div>
               <div class="continer-cadr__text">
                 <div class="card-titel__text">
@@ -563,6 +563,17 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="maps">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577343.9824481524!2d36.726228822395875!3d55.58025721140694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2z0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8!5e0!3m2!1sru!2skg!4v1698316408737!5m2!1sru!2skg"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </div>
     </div>
 
